# moai-dev

./: .gitignore
ant/: .gitignore  gs-t2-host
ant/host-source/source/project/src/app/: MoaiActivity.java
ant/host-source/source/project/src/moai/: Moai.java
ant/libmoai/: build.sh
ant/libmoai/jni/moaicore/: Android.mk
cmake/: CMakeLists.txt
cmake/host-glut/: CMakeLists.txt
cmake/host-test/: CMakeLists.txt
cmake/libcares/: ares_config.h
cmake/lua-lib/: CMakeLists.txt
cmake/moai-luaext/: CMakeLists.txt
glewinfo/: glewinfo
lua/: lua
luac/: luac
moai/: moai
samples/deck/tilemap-animated/: run.sh
src/hosts/: GlutHost.cpp
src/moai-android/: MOAIAppAndroid.cpp  MOAIAppAndroid.h
src/moai-luaext/: host.cpp
src/moai-util/: host.cpp
src/moaiext-android/: MOAIAppAndroid.cpp  MOAIAppAndroid.h
visualinfo/: visualinfo
